finished half of panier for vendeur

--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="PPProduits" asp-action="Index">Mes Produits</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="PPProduits" asp-action="ListePanier">Mes Paniers</a>
+                            </li>
                         }
 
                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Gestionnaire"))
