--- a/Projet Web Commerce/Views/PPProduits/DetailsPanier.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/DetailsPanier.cshtml
@@ -74,62 +74,83 @@ else
         <h1>Panier de @Model.AdresseEmail </h1>
     }
     <a asp-action="ListePanier">Retour à la liste</a>
-
-    <div class="d-flex flex-wrap align-content-start bg-light overflow-auto col-md-8" style="margin-bottom:50px; height:600px;">
-        @foreach (var client in clientProducts)
-        {
-            var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == client.NoProduit);
-
-            if (item != null)
+    <div class="row" style="margin-bottom:50px; height:600px;">
+        <div class="d-flex flex-wrap align-content-start bg-light overflow-auto col-md-12 col-6" style="margin-bottom:50px; width:610px; height:600px;">
+            @foreach (var client in clientProducts)
             {
-                <div class="card" style="width:900px; margin: 2px;">
-                    <div class="card-body row">
-                        @{
-                            var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
-                            string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
-                            Console.WriteLine("FILE Name : " + item.Photo);
-                            Console.WriteLine("FILE : " + File.Exists(path));
-                        }
-                        <div class="col-3 d-flex align-items-center">
-                            <img src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
-                        </div>                        
-                        <div class="col-3 d-flex align-items-center ">
-                            <b>x @Html.DisplayFor(modelItem => client.TotalItems) </b>
-                        </div>
-                        <div class="col-3 d-flex align-items-center ">
-                            <b> @Html.DisplayFor(modelItem => item.Nom) </b>
-                        </div>
-                        @if(item.PrixVente != null)
-                        {
-                            var prix = item.PrixVente * client.TotalItems;
-                            <div class="col-3 d-flex align-items-center ">
-                                <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
+                var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == client.NoProduit);
+
+                if (item != null)
+                {
+                    <div class="card mb-3">
+                        <div class="card-body row">
+                            @{
+                                var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
+                                string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
+                                Console.WriteLine("FILE Name : " + item.Photo);
+                                Console.WriteLine("FILE : " + File.Exists(path));
+                            }
+                            <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+                                <img src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
                             </div>
-                        }
-                        else
-                        {
-                            var prix = item.PrixDemande * client.TotalItems;
-                            <div class="col-3 d-flex align-items-center ">
-                                <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
+                            <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+                                <b>x @Html.DisplayFor(modelItem => client.TotalItems) </b>
                             </div>
-                        }
-                        @{
-                            var poids = item.Poids * client.TotalItems;
-                        }
-                       
-                        <div class="col-3 d-flex align-items-center ">
-                            <b>Poids Total: @Html.DisplayFor(modelItem => poids) Kg </b>
+                            <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+                                <b>@Html.DisplayFor(modelItem => item.Nom) </b>
+                            </div>
+                            @if (item.PrixVente != null)
+                            {
+                                var prix = item.PrixVente * client.TotalItems;
+                                <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+                                    <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
+                                </div>
+                            }
+                            else
+                            {
+                                var prix = item.PrixDemande * client.TotalItems;
+                                <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+                                    <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
+                                </div>
+                            }
+                            @{
+                                var poids = item.Poids * client.TotalItems;
+                            }
+                            <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+                                <b>Poids Total: @Html.DisplayFor(modelItem => poids) Kg </b>
+                            </div>
                         </div>
-                        
                     </div>
-                </div>
-                
+                }
             }
+        </div>
 
-            
-        }
-    </div>
 
+        <div class="d-flex flex-wrap align-content-start bg-light overflow-auto col-md-8 col-6" style="margin-bottom:50px; height:600px;">
+            @foreach (var client in clientProducts)
+            {
+                var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == client.NoProduit);
+
+                if (item != null)
+                {
+                    <div class="card" style="width:900px; margin: 2px;">
+                        <div class="card-body row">
+                            @{
+                                var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
+                                string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
+                                Console.WriteLine("FILE Name : " + item.Photo);
+                                Console.WriteLine("FILE : " + File.Exists(path));
+                            }
+                            <div class="col-2 d-flex align-items-center">
+                                <img src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
+                            </div>
+
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div> 
 
 
 }
