--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -56,9 +56,12 @@
 
                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Gestionnaire"))
                         {
-                        <li class="nav-item">
-                            <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="MainMenu" asp-action="GestionVendeurs">Gestion vendeurs</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px"
+                                    asp-controller="PPGestionnaires" asp-action="ListeVendeurs">
+                                    Gestion vendeurs
+                                </a>
+                            </li>
                         }
 
                     </ul>
