--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
+@using Projet_Web_Commerce.Data;
 
 @model Projet_Web_Commerce.Models.ModelCatalogueVendeur
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
+@inject AuthDbContext _context
 
 @{
     var productList = SignInManager.IsSignedIn(User) ? Model.ProduitsList : Model.NouveauxProduits;
@@ -18,12 +20,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="filter_multi_select.css" />
 
 
 
@@ -38,12 +35,12 @@
                 {
                     @Html.Hidden("id", Model.nomAffaire)
                     <div class="row">
-                        <div class="col-md-3 d-flex align-items-start">
+                        <div class="col-md-4 d-flex align-items-start">
 
                             <div class="flex-grow-1">
                                 <div class="input-group" style="width:400px;">
                                     <!-- Adjust width and remove margin -->
-                                    @Html.TextBox("SearchString", null, new { placeholder = "Rechercher", @class = "form-control" })
+                                    @Html.TextBox("SearchString", null, new { placeholder = "Rechercher par Nom ou Description", @class = "form-control" })
                                     <div class="input-group-append">
                                         <span class="input-group-text">
                                             <i class="bi bi-search"></i>
@@ -53,13 +50,8 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 d-flex align-items-start">
-                            <select multiple name="language" id="languages">
-                                <option value="js">JavaScript</option>
-                                <option value="html">HTML</option>
-                                <option value="css">CSS</option>
-                                ... more options here ...
-                            </select>
+                        <div class="col-md-3">
+                            <a href="#" class="show-options-link">Afficher plus d'options       +</a>
                         </div>
 
 
@@ -76,7 +68,7 @@
                             </select>
 
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <button type="submit" style="color: rgb(249, 229, 71) ; background-color: rgb(124, 105, 146);" class="btn btn-secondary">Rechercher</button>
 
                             <div class="float-end">
@@ -94,6 +86,34 @@
                         </div>
 
                     </div>
+
+                    <div class="row toggle-container" style="display: none;">
+                        <div class="col-md-3" style="padding: 5px;">
+                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
+                                @foreach (var cat in Model.CategoriesList)
+                                {
+                                    <option value="@cat.Description">@cat.Description</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="col-md-3" style="padding: 5px;">
+                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
+                                @foreach (var cat in Model.CategoriesList)
+                                {
+                                    <option value="@cat.Description">@cat.Description</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="col-md-3" style="padding: 5px;">
+                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
+                                @foreach (var cat in Model.CategoriesList)
+                                {
+                                    <option value="@cat.Description">@cat.Description</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+
                 }
             }
             else
@@ -206,5 +226,64 @@
     </div>
 }
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="~/lib"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+
+<style>
+    .dropdown-menu {
+        max-height: 200px; /* Set maximum height for the dropdown */
+        overflow-y: auto; /* Enable vertical scrolling if needed */
+    }
+
+    a {
+        color: rgb(124, 105, 146);
+        font-weight: bold; /* Bold font */
+        text-decoration: none; /* Remove underline */
+        transition: color 0.3s; /* Smooth transition for color change */
+    }
+        
+    a:hover {
+        color: #ccc; /* Light gray color on hover */
+    }
+</style>
+@section Scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('#vendeursListBox').mousedown(function (e) {
+                e.preventDefault();
+
+                var originalScrollTop = $(this).scrollTop();
+                $(this).focus();
+                $(this).mousemove(function (e2) {
+                    $(this).scrollTop(originalScrollTop);
+                    $(this).unbind("mousemove");
+                });
+            });
+
+            $('#vendeursListBox option').mousedown(function (e) {
+                e.preventDefault();
+                $(this).prop('selected', !$(this).prop('selected'));
+                return false;
+            });
+
+            $('.dropdown-menu').on('click', function (e) {
+                e.stopPropagation();
+            });
+
+
+            $(document).ready(function () {
+                $("a").click(function () {
+                    $(".toggle-container").animate({
+                        height: 'toggle'
+                    });
+                });
+            });
+        });
+    </script>
+}
+
