--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -1,4 +1,4 @@
-﻿@model Projet_Web_Commerce.Models.ModelCatalogue
+﻿@model Projet_Web_Commerce.Models.ModelCatalogueVendeur
 @using Microsoft.AspNetCore.Hosting
 @using System.IO
 @inject IWebHostEnvironment env
