--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -21,6 +21,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 
 
 
@@ -89,7 +94,7 @@
 
                     <div class="row toggle-container" style="display: none;">
                         <div class="col-md-3" style="padding: 5px;">
-                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
+                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="searchCat" name="searchCat">
                                 @foreach (var cat in Model.CategoriesList)
                                 {
                                     <option value="@cat.Description">@cat.Description</option>
@@ -97,21 +102,18 @@
                             </select>
                         </div>
                         <div class="col-md-3" style="padding: 5px;">
-                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
-                                @foreach (var cat in Model.CategoriesList)
+                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="searchNums" name="searchNums">
+                                @foreach (var nums in ViewBag.NumsProduit)
                                 {
-                                    <option value="@cat.Description">@cat.Description</option>
+                                    <option value="@nums">@nums</option>
                                 }
                             </select>
                         </div>
-                        <div class="col-md-3" style="padding: 5px;">
-                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="parPage" name="parPage">
-                                @foreach (var cat in Model.CategoriesList)
-                                {
-                                    <option value="@cat.Description">@cat.Description</option>
-                                }
-                            </select>
+                        <div class="col-md-3 input-group date">
+                            <input type="date" class="form-control" id="birthday" name="birthday">
+                            <span class="input-group-text"><i class="bi bi-calendar"></i></span>
                         </div>
+
                     </div>
 
                 }
