--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -1,11 +1,9 @@
-@model Projet_Web_Commerce.Models.ModelCatalogue
 @using Microsoft.AspNetCore.Hosting
 @using System.IO
 @inject IWebHostEnvironment env
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using Projet_Web_Commerce.Data;
-
 @model Projet_Web_Commerce.Models.ModelCatalogueVendeur
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject AuthDbContext _context
@@ -149,7 +147,14 @@
                                                         <h5 class="card-text float-end" style="color: orangered">Nouveau !</h5>
                                                     </div>
                                                 }
-                                                <img src="~/Logo/@(item.Photo)" alt="./Logo/@(item.Photo)" width="200" height="200" />
+                                                @{
+                                                    var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
+                                                    string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
+                                                    Console.WriteLine("FILE Name : " + item.Photo);
+                                                    Console.WriteLine("FILE : " + File.Exists(path));
+                                                }
+
+                                                <img src="@Url.Content(imagePath)" alt="@item.Photo" width="200" height="200" />
                                                 @{
                                                     var category = Model.CategoriesList.FirstOrDefault(c => c.NoCategorie == item.NoCategorie);
                                                 }
